@@ -1,113 +1,117 @@
 import java.nio.file.Files
 import org.elasticsearch.gradle.testclusters.StandaloneRestIntegTestTask
 import org.elasticsearch.gradle.test.SystemPropertyCommandLineArgumentProvider;
-import org.gradle.api.tasks.Input;
-import org.gradle.process.CommandLineArgumentProvider;
-
-import java.util.LinkedHashMap;
-import java.util.Map;
-import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 buildscript {
-  dependencies {
-    classpath "org.elasticsearch.gradle:build-tools:${elasticsearchVersion}"
-  }
+    dependencies {
+        classpath "org.elasticsearch.gradle:build-tools:${elasticsearchVersion}"
+    }
 }
 
 plugins {
-  // the old co.riiid.gradle is not gradle 7.0 compatible
-  id "com.github.humblerookie.gradle" version "0.4.4"
-  id "com.github.ben-manes.versions" version '0.36.0'
+    id 'java-gradle-plugin'
+    id "com.github.humblerookie.gradle" version "0.4.4"
+    id "com.github.ben-manes.versions" version '0.36.0'
+}
+
+sourceSets {
+    yamlRestTest
 }
 
 repositories {
-  mavenCentral()
-  // only needed for beta1, can be removed after upgrading to newer version
-  maven {
-    url = 'https://s3.amazonaws.com/download.elasticsearch.org/lucenesnapshots/cc2a31f2be8'
-  }
+    mavenCentral()
+    // only needed for beta1, can be removed after upgrading to newer version
+    maven {
+        url = 'https://s3.amazonaws.com/download.elasticsearch.org/lucenesnapshots/cc2a31f2be8'
+    }
 }
 
-group = 'de.spinscale.elasticsearch.plugin'
+group = 'com.succez.elasticsearch.plugin'
 version = "${elasticsearchVersion}.1-SNAPSHOT"
 
 apply plugin: 'java'
-apply plugin: 'idea'
 apply plugin: 'elasticsearch.esplugin'
 apply plugin: 'elasticsearch.testclusters'
 
 sourceCompatibility = '11'
 
 esplugin {
-  name = 'ingest-langdetect'
-  description = 'Ingest processor doing language detection for fields'
-  classname = 'org.elasticsearch.plugin.ingest.langdetect.IngestLangDetectPlugin'
-  licenseFile = rootProject.file('LICENSE.txt')
-  noticeFile = rootProject.file('NOTICE.txt')
+    name = 'ingest-markdown'
+    description = 'Ingest processor extracting plain text from markdown file'
+    classname = 'org.elasticsearch.plugin.ingest.markdown.MarkdownPlugin'
+    licenseFile = rootProject.file('LICENSE.txt')
+    noticeFile = rootProject.file('NOTICE.txt')
 }
 
 // remove me after alpha-2 release
 configurations {
-  resolveableCompileOnly {
-    exclude(group: 'org.elasticsearch', module: 'elasticsearch-lz4')
-  }
-  implementation {
-    exclude(group: 'org.elasticsearch', module: 'elasticsearch-lz4')
-  }
+    resolveableCompileOnly {
+        exclude(group: 'org.elasticsearch', module: 'elasticsearch-lz4')
+    }
+    implementation {
+        exclude(group: 'org.elasticsearch', module: 'elasticsearch-lz4')
+    }
 }
 
 // ignore javadoc warnings for now
 tasks.withType(Javadoc) {
-  options.addStringOption('Xdoclint:none', '-quiet')
+    options.addStringOption('Xdoclint:none', '-quiet')
 }
 
 githubRelease.doFirst {
-  if (!System.getProperty('GITHUB_TOKEN', '')) {
-    throw new Exception('Missing property GITHUB_TOKEN')
-  }
+    if (!System.getProperty('GITHUB_TOKEN', '')) {
+        throw new Exception('Missing property GITHUB_TOKEN')
+    }
 
-  // check if zip file is there
-  assert file("build/distributions/ingest-langdetect-${version}.zip").exists()
+    // check if zip file is there
+    assert file("build/distributions/ingest-markdown-${version}.zip").exists()
 
-  // rename zip file
-  def currentVersion = version.replace('-SNAPSHOT', '')
-  def filename = "build/distributions/ingest-langdetect-${currentVersion}.zip"
-  Files.copy(file("build/distributions/ingest-langdetect-${version}.zip").toPath(), file(filename).toPath())
+    // rename zip file
+    def currentVersion = version.replace('-SNAPSHOT', '')
+    def filename = "build/distributions/ingest-markdown-${currentVersion}.zip"
+    Files.copy(file("build/distributions/ingest-markdown-${version}.zip").toPath(), file(filename).toPath())
 
-  // configuration
-  github {
-    owner = 'spinscale'
-    repo = 'elasticsearch-ingest-langdetect'
-    token = System.getProperty('GITHUB_TOKEN')
-    tagName = currentVersion
-    assets = [ filename ]
-    targetCommitish = 'main'
-  }
+    // configuration
+    github {
+        owner = 'zengshenw'
+        repo = 'elasticsearch-ingest-markdown'
+        token = System.getProperty('GITHUB_TOKEN')
+        tagName = currentVersion
+        assets = [filename]
+        targetCommitish = 'main'
+    }
 }
 
 // setup yaml rest tests
 testClusters {
-  yamlRestTest
+    yamlRestTest
 }
 
 sourceSets {
-  yamlRestTest
+    yamlRestTest
 }
 
 configurations {
-  yamlRestTestImplementation.extendsFrom testImplementation
-  yamlRestTestRuntimeOnly.extendsFrom testRuntimeOnly
-  restTestSpecs
+    yamlRestTestImplementation.extendsFrom testImplementation
+    yamlRestTestRuntimeOnly.extendsFrom testRuntimeOnly
+    restTestSpecs
 }
 
 tasks.register('copyRestTestSpecs', Copy) {
-  from zipTree(configurations.restTestSpecs.singleFile)
-  into "$buildDir/restResources/restspec"
+    from zipTree(configurations.restTestSpecs.singleFile)
+    into "$buildDir/restResources/restspec"
 }
 
-TaskProvider<Zip> bundle = project.getTasks().withType(Zip.class).named("bundlePlugin");
+/**
+ * 设置下编译java的编码格式，否则在win下面会因为编码不同出错。
+ */
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+    // options.compilerArgs << '--add-exports=jdk.scripting.nashorn/jdk.nashorn.internal.runtime=ALL-UNNAMED' << '--add-exports=jdk.scripting.nashorn/jdk.nashorn.internal.objects=ALL-UNNAMED'
+    options.compilerArgs << '-Xlint:-deprecation' << '-Xlint:-unchecked'
+}
 
+TaskProvider<Zip> bundle = project.getTasks().withType(Zip.class).named("bundlePlugin")
 // Register rest resources with source set
 sourceSets.yamlRestTest.getOutput().dir("$buildDir/restResources/restspec");
 
@@ -122,7 +126,8 @@ tasks.register('yamlRestTest', StandaloneRestIntegTestTask) { testTask ->
     testTask.setTestClassesDirs(sourceSets.yamlRestTest.getOutput().getClassesDirs())
     testTask.setClasspath(sourceSets.yamlRestTest.getRuntimeClasspath())
 
-
+    // lingua requires a ton of heap to load all the models!
+    System.setProperty("tests.heap.size", "3g")
     SystemPropertyCommandLineArgumentProvider nonInputProperties = new SystemPropertyCommandLineArgumentProvider()
     nonInputProperties.systemProperty("tests.rest.cluster", "${-> String.join(",", cluster.getAllHttpSocketURI())}")
     nonInputProperties.systemProperty("tests.cluster", "${-> String.join(",", cluster.getAllTransportPortURI())}")
@@ -135,12 +140,15 @@ tasks.register('yamlRestTest', StandaloneRestIntegTestTask) { testTask ->
 check.dependsOn 'yamlRestTest'
 
 dependencies {
-  implementation 'com.youcruit.com.cybozu.labs:langdetect:1.1.2-20151117'
-  implementation 'net.arnx:jsonic:1.3.10'
-  // the yaml tests require a log4j2 dependency, otherwise a dependency is thrown on startup
-  runtimeOnly 'org.apache.logging.log4j:log4j-core:2.11.1'
-  testImplementation "org.elasticsearch.test:framework:$elasticsearchVersion"
-  restTestSpecs "org.elasticsearch:rest-api-spec:$elasticsearchVersion"
+    implementation 'com.youcruit.com.cybozu.labs:langdetect:1.1.2-20151117'
+    implementation 'net.arnx:jsonic:1.3.10'
+    runtimeOnly 'org.apache.logging.log4j:log4j-core:2.11.1'
+    testImplementation ('junit:junit:4.12') {
+        exclude module : 'hamcrest'
+        exclude module : 'hamcrest-core'
+    }
+    testImplementation "org.elasticsearch.test:framework:$elasticsearchVersion"
+    restTestSpecs "org.elasticsearch:rest-api-spec:$elasticsearchVersion"
+    implementation "org.commonmark:commonmark:$commonVersion"
+    implementation group: 'org.apache.directory.studio', name: 'org.apache.commons.io', version: '2.4'
 }
-
-
